Finalização de projeto para fase 2 em programação de dados PUCRS - Fase 2 - Steam games - Rev. 01

--- a/PUCRS_Fase_2_Steam_games.ipynb
+++ b/PUCRS_Fase_2_Steam_games.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOKaNnLq7R+jpC7etIyBRlM",
+      "authorship_tag": "ABX9TyOGU110ygByQw+G3cU5pkuQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "\n",
         "> _NOME:_ Felipe Pinheiro Fossá\n",
         "\n",
-        "> _CURSO:_ Banco de Dados: ênfase em data Analytics - programação para dados\n",
+        "> _CURSO:_ Programação para dados\n",
         "\n",
         "\n",
         "\n"
@@ -67,16 +67,16 @@
     {
       "cell_type": "code",
       "source": [
-        "pip install pandas matplotlib numpy seaborn"
+        "!pip install pandas matplotlib numpy seaborn"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9ogUJk4b1BRU",
-        "outputId": "cc9a803a-b5ab-4c19-e528-2cc9ad5991b0"
+        "outputId": "8dbdd3b1-ae83-436d-e71f-63f0e889aeb7"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,7 +131,7 @@
       "metadata": {
         "id": "jnnTHJWKswdj"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -191,9 +191,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YQeFZswntDD2",
-        "outputId": "bf8aee36-a941-4c1b-a76d-e3c0302cea9c"
+        "outputId": "4dc793f2-8926-4381-c5d6-c1c00241d18c"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,9 +257,9 @@
           "height": 381
         },
         "id": "IK-9IUkRv94M",
-        "outputId": "8549c190-08c1-4568-c5a6-a273218ceb5c"
+        "outputId": "a3bf652f-e17e-4c77-9a42-c713e677a437"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,7 +298,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-80829c6c-3a8f-4300-bb18-867e622d8f65\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e6ac9805-b143-441d-a5b7-5c9f482e8fa3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -389,7 +389,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-80829c6c-3a8f-4300-bb18-867e622d8f65')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e6ac9805-b143-441d-a5b7-5c9f482e8fa3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -441,12 +441,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-80829c6c-3a8f-4300-bb18-867e622d8f65 button.colab-df-convert');\n",
+              "        document.querySelector('#df-e6ac9805-b143-441d-a5b7-5c9f482e8fa3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-80829c6c-3a8f-4300-bb18-867e622d8f65');\n",
+              "        const element = document.querySelector('#df-e6ac9805-b143-441d-a5b7-5c9f482e8fa3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -466,8 +466,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-d087b84c-576b-4535-a3eb-f69e1d345aeb\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d087b84c-576b-4535-a3eb-f69e1d345aeb')\"\n",
+              "<div id=\"df-1f997a5c-bad1-417c-85e3-2a7bea940b30\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1f997a5c-bad1-417c-85e3-2a7bea940b30')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -586,7 +586,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-d087b84c-576b-4535-a3eb-f69e1d345aeb button');\n",
+              "        document.querySelector('#df-1f997a5c-bad1-417c-85e3-2a7bea940b30 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -698,9 +698,9 @@
           "height": 1000
         },
         "id": "acAnyDM_2ash",
-        "outputId": "62d4f966-3fc3-4c0f-f93f-f3d9ee20b331"
+        "outputId": "cc58eb52-069a-452d-d2ae-be2d5b935680"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -873,7 +873,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4e03713c-e314-4268-a94f-9528ddd8e043\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-b57664a4-c5d2-412b-8d54-557e9bd63301\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1187,7 +1187,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4e03713c-e314-4268-a94f-9528ddd8e043')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b57664a4-c5d2-412b-8d54-557e9bd63301')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1239,12 +1239,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4e03713c-e314-4268-a94f-9528ddd8e043 button.colab-df-convert');\n",
+              "        document.querySelector('#df-b57664a4-c5d2-412b-8d54-557e9bd63301 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4e03713c-e314-4268-a94f-9528ddd8e043');\n",
+              "        const element = document.querySelector('#df-b57664a4-c5d2-412b-8d54-557e9bd63301');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1264,8 +1264,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-a68e1c01-7eef-4b46-b854-5f1bac430db5\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a68e1c01-7eef-4b46-b854-5f1bac430db5')\"\n",
+              "<div id=\"df-66690ab4-af80-4834-81be-5144845e977e\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-66690ab4-af80-4834-81be-5144845e977e')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1384,14 +1384,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-a68e1c01-7eef-4b46-b854-5f1bac430db5 button');\n",
+              "        document.querySelector('#df-66690ab4-af80-4834-81be-5144845e977e button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_171e177b-2d1f-4754-8dc8-5e6d170ae7bd\">\n",
+              "  <div id=\"id_cc2f3a23-3dc0-4b5d-b03b-0debf330baa1\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1435,7 +1435,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_171e177b-2d1f-4754-8dc8-5e6d170ae7bd button.colab-df-generate');\n",
+              "        document.querySelector('#id_cc2f3a23-3dc0-4b5d-b03b-0debf330baa1 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1535,9 +1535,9 @@
           "height": 892
         },
         "id": "x8K5mtnB5yeA",
-        "outputId": "b0109f3c-5ae6-4170-dab2-980d7ba4c198"
+        "outputId": "bfa0ccc0-9024-44e6-ce5d-c492c1afdb62"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -1819,9 +1819,9 @@
           "height": 569
         },
         "id": "jDXld3G659vN",
-        "outputId": "60516a8a-6081-4571-a99e-db73eaedfbdf"
+        "outputId": "656ff2ca-4852-412d-e2dc-b482eb2050cc"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -2022,9 +2022,9 @@
           "height": 1000
         },
         "id": "fAK-FQXFsdha",
-        "outputId": "ed5c0539-a4a2-4d59-9bf7-dcd86a130eda"
+        "outputId": "3b362a0c-0557-4557-da33-937aa41628e6"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -2184,7 +2184,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-2eeeee85-ea0e-462d-9323-5ff13086feb3\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0ee8e5ca-25ae-4469-a20a-c89149707fb9\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2498,7 +2498,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2eeeee85-ea0e-462d-9323-5ff13086feb3')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0ee8e5ca-25ae-4469-a20a-c89149707fb9')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2550,12 +2550,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-2eeeee85-ea0e-462d-9323-5ff13086feb3 button.colab-df-convert');\n",
+              "        document.querySelector('#df-0ee8e5ca-25ae-4469-a20a-c89149707fb9 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-2eeeee85-ea0e-462d-9323-5ff13086feb3');\n",
+              "        const element = document.querySelector('#df-0ee8e5ca-25ae-4469-a20a-c89149707fb9');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2575,8 +2575,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-2e8e0b18-3ce3-4349-a46e-f3f986414383\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2e8e0b18-3ce3-4349-a46e-f3f986414383')\"\n",
+              "<div id=\"df-8add9a98-0ea6-4bab-a06a-73d9c7521d9b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8add9a98-0ea6-4bab-a06a-73d9c7521d9b')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2695,14 +2695,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-2e8e0b18-3ce3-4349-a46e-f3f986414383 button');\n",
+              "        document.querySelector('#df-8add9a98-0ea6-4bab-a06a-73d9c7521d9b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_1da5d711-5ed8-4b7c-883f-ad6717d776f6\">\n",
+              "  <div id=\"id_8df3f99b-ebc6-4bed-a2a4-9c56fce8fc92\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -2746,7 +2746,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_1da5d711-5ed8-4b7c-883f-ad6717d776f6 button.colab-df-generate');\n",
+              "        document.querySelector('#id_8df3f99b-ebc6-4bed-a2a4-9c56fce8fc92 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -2792,7 +2792,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d82609c9-585c-45a4-bbf3-32f1f6c25cc7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c5d063a3-3207-42f3-a348-9d9252f1d01b\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2872,7 +2872,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d82609c9-585c-45a4-bbf3-32f1f6c25cc7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c5d063a3-3207-42f3-a348-9d9252f1d01b')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2924,12 +2924,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d82609c9-585c-45a4-bbf3-32f1f6c25cc7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-c5d063a3-3207-42f3-a348-9d9252f1d01b button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d82609c9-585c-45a4-bbf3-32f1f6c25cc7');\n",
+              "        const element = document.querySelector('#df-c5d063a3-3207-42f3-a348-9d9252f1d01b');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2949,8 +2949,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-f55aca3e-b1d1-470f-b7bd-e7948fc6f5af\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f55aca3e-b1d1-470f-b7bd-e7948fc6f5af')\"\n",
+              "<div id=\"df-b60e9a6e-8187-45d0-8eab-59b797afe313\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b60e9a6e-8187-45d0-8eab-59b797afe313')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -3069,7 +3069,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-f55aca3e-b1d1-470f-b7bd-e7948fc6f5af button');\n",
+              "        document.querySelector('#df-b60e9a6e-8187-45d0-8eab-59b797afe313 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -3146,12 +3146,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 627
+          "height": 607
         },
         "id": "PyiZjFuv6Px5",
-        "outputId": "b7285bc8-62e9-41b9-a66c-60824d956c0c"
+        "outputId": "598431aa-74ff-4453-eccc-b76d91eec4b5"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3232,9 +3232,9 @@
           "height": 671
         },
         "id": "WgDUIMZG6t0C",
-        "outputId": "112583d9-4335-44f9-e872-e299e6395e1f"
+        "outputId": "04f75e7e-b097-4ba1-b047-5b6d5187415c"
       },
-      "execution_count": 70,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3285,9 +3285,9 @@
           "height": 444
         },
         "id": "81qGwhiWw8om",
-        "outputId": "475e198d-980f-4a35-b601-f9978d68128b"
+        "outputId": "359b5e33-a3a2-42d3-97b3-2ec2120f7d31"
       },
-      "execution_count": 77,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
